<resources>
    <string name="app_name">活石</string>

    <!--公用字符串-->
    <string name="common_loading_text">正在加载</string>
    <string name="common_retry_text">加载失败，点击重试</string>
    <string name="common_nodata">没有找到相关内容，换个搜索试试</string>

    <!--主页面-->
    <string name="main_tab_huoshi">活石</string>
    <string name="main_tab_bible">圣经</string>
    <string name="main_tab_find">发现</string>
    <string name="main_tab_me">我</string>
    <string name="text_suffrage">代祷</string>
    <string name="text_hymn">赞美诗</string>
    <string name="text_game">小游戏</string>
    <string name="text_five_two">五饼二鱼</string>
    <string name="text_share_huoshi">分享活石</string>
    <string name="text_my_prayer">我的祷告箱</string>
    <string name="text_my_invitation">我的邀请</string>
    <string name="text_feedback">打小报告</string>
    <string name="text_upgrade">检查更新</string>
    <string name="text_logout">退出登录</string>
    <string name="text_join_suffrage">加入代祷</string>
    <string name="text_share">分享</string>
    <string name="text_avatar">头像</string>
    <string name="text_nickname">昵称</string>
    <string name="text_gender">性别</string>
    <string name="text_district">地区</string>
    <string name="text_birthday">生日</string>
    <string name="text_time">信主时间</string>
    <string name="text_phone_number">手机号:</string>
    <string name="text_password">密\t\t码:</string>
    <string name="text_login">登录账号</string>
    <string name="text_forget_pwd">忘记密码？</string>
    <string name="text_verification_code">验证码:</string>
    <string name="text_set_pwd">设置密码:</string>
    <string name="text_next">下一步</string>
    <string name="text_account_to_login">已有账号，去登录</string>
    <string name="text_send_code">发送验证码</string>
    <string name="text_finish_register">完成注册</string>
    <string name="text_predit_time">预计更新祷告时间</string>
    <string name="text_remind_suffrage">（及时更新代祷事项进展会让兄弟姐妹们更有信心）</string>
    <string name="text_phone_hint">您的手机号，我们会严格保密</string>
    <string name="text_yesterday_read_time">昨日阅读时间：</string>
    <string name="text_total_read_time">累计阅读时长：</string>
    <string name="text_christ_life">基督生活 随身常在</string>
    <string name="text_continue_read_days">连续读经天数</string>
    <string name="text_continue_interces_days">连续代祷天数</string>
    <string name="lable_login_register_account">注册账号</string>
    <string name="text_warn_phone_empty">手机号码不能为空!</string>
    <string name="text_verification_sent_success">验证码发送成功!</string>
    <string name="text_warn_verification_empty">验证码不能为空!</string>
    <string name="text_warn_verification_length">验证码长度不对!</string>
    <string name="text_warn_pwd_empty">密码不能为空!</string>
    <string name="text_warn_pwd_length">密码长度不对!</string>
    <string name="text_warn_pwd_regex">密码格式不正确!</string>
    <string name="text_input_verification_code">请输入验证码</string>
    <string name="text_input_pwd">输入6-X位数字、字母或下划线</string>
    <string name="text_click_to_send_verification">请点击发送验证码!</string>
    <string name="text_register_success">注册成功!</string>
    <string name="text_login_success">登录成功!</string>
    <string name="text_setting_nickname">昵称设置</string>
    <string name="text_cancle">取消</string>
    <string name="text_confirm">确定</string>
    <string name="text_choose_gender">请选择性别!</string>
    <string name="text_empty_believe_date">信主时间不能为空!</string>
    <string name="text_empty_birthday">生日不能为空!</string>
    <string name="text_empty_nick_name">昵称不能为空!</string>
    <string name="text_interces">代祷</string>
    <string name="text_intercesing">代祷中</string>
    <string name="text_interces_finished">代祷完成</string>
    <string name="text_huoshi_id">活石ID</string>
</resources>
