<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="match_parent"
    android:background="@color/common_white_bg"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:padding="@dimen/margin_normal">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/text_setting_nickname"
        android:textColor="@color/text_color_chapter"
        android:textSize="@dimen/text_size_very_small_" />

    <EditText
        android:id="@+id/edit_setting_nickname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_very_big"
        android:background="@drawable/drawable_gray_border_gray_bg"
        android:padding="@dimen/margin_normal"
        android:textColor="#999999"
        android:textSize="@dimen/text_size_very_small_" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="@dimen/margin_very_big"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_cancle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/conmon_gray_line_divider"
            android:text="@string/text_cancle"
            android:textColor="@color/text_color_white"
            android:textSize="@dimen/text_size_very_small_" />

        <Button
            android:id="@+id/button_confirm"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/margin_normal"
            android:layout_weight="1"
            android:background="@color/common_blue_light"
            android:text="@string/text_confirm"
            android:textColor="@color/text_color_white"
            android:textSize="@dimen/text_size_very_small_" />
    </LinearLayout>

</LinearLayout>